# Catto

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  MAINTENANCE_LOG.md  Makefile  README.md  docker-compose.yml  install.bat  install.sh  pyproject.toml  start-backend.js  start.bat  start.sh  start_catto.bat  start_catto.sh  stop.bat
backend/: .env.example  Dockerfile  ais_proxy.js  main.py  pyproject.toml
backend/config/: news_feeds.json
backend/data/: geocode_cache.json  military_bases.json  sat_gp_cache.json
backend/scripts/: convert_power_plants.py  release_helper.py  scan-secrets.sh  setup-venv.ps1  setup-venv.sh
backend/services/: ais_stream.py  api_settings.py  carrier_tracker.py  cctv_pipeline.py  config.py  constants.py  correlation_engine.py  data_fetcher.py  env_check.py  geocode.py  geopolitics.py  kiwisdr_fetcher.py  liveuamap_scraper.py  memory_manager.py  network_utils.py  news_feed_config.py  node_settings.py  oracle_service.py  privacy_core_client.py  psk_reporter_fetcher.py  radio_intercept.py  region_dossier.py  schemas.py  sentinel_search.py  shodan_connector.py  sigint_bridge.py  tinygs_fetcher.py  unusual_whales_connector.py  updater.py  web_search.py  wormhole_supervisor.py
backend/services/fetchers/: _store.py  earth_observation.py  emissions.py  fimi.py  financial.py  flights.py  geo.py  infrastructure.py  meshtastic_map.py  military.py  mpa_oceans_x.py  mpa_supplementary.py  (+8 more)
backend/tests/: conftest.py  test_api_smoke.py  test_gdelt_updater_hardening.py  test_news_keywords.py  test_release_helper.py  test_store.py
(+220 files in other folders)
